--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     src = "./img/PokemonLeague.jpg" 
     alt = "Pokemon League Cup" 
     width="600px"
-  >
+    >
     <p>This is a page all about the Pokémon TCG!</p> 
   </header> 
   <main> 
@@ -30,9 +30,9 @@
     src = "./img/InternationChampion.jpg" 
     alt = "A Champion is born!" 
     width="400px"
-  >
-      <p>Learn more about<a href = https://limitlesstcg.com/>Standard Decks</a> here!</p>
-      
+    >
+    <p>Learn more about<a href = https://limitlesstcg.com/>Standard Decks</a> here!
+    </p>  
     </article> 
     <nav> 
       <h4>Useful Websites for competitive Pokémon Trading Card Game</h4> 
