--- a/ page2.html
+++ b/ page2.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <!--This page is design for a collection of useful link to help users find valuable and useful resources-->
 <header> 
+  <link rel="stylesheet" href="style.css">
     <h1>Useful Pokémon Websites</h1> 
     <p>This is a page is for useful links for your journey in Pokémon TCG!</p> 
   </header> 
