--- a/index.html
+++ b/index.html
@@ -2,21 +2,29 @@
 <html>
   <!--This page is design for a intro into Pokémon TCG to engage and educate the audience about Pokémon TCG-->
 
+  <head>
+    <!-- Link to the stylesheet called style.css -->
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <h1>Competitive Pokémon TCG </h1> 
 <header> 
-    <h1>My Pokémon Page</h1> 
     <img 
     src = "./img/PokemonLeague.jpg" 
     alt = "Pokemon League Cup" 
-    width="600px"
+    width="500px"
     >
     <p>This is a page all about the Pokémon TCG!</p> 
   </header> 
   <main> 
-    <aritcle> 
-      <h3>Pokémon TCG</h3> 
-      <p>Pokémon trading card game has been around since 1998 in the USA. The first ever world championship was held in 2004 in Orlando Florida </p> 
+    <aritcle>  
+      <p>   Pokémon trading card game has been around since 1998 in the USA. The first ever world championship was held in 2004 in Orlando Florida </p> 
       </section> 
       <section> 
+            <img 
+    src = "./img/InternationChampion.jpg" 
+    alt = "A Champion is born!" 
+    width="400px"
+    >
         <p>Best Decks in Current Standard Format</p> 
         <ol> 
           <li>Gholdengo</li> 
@@ -26,11 +34,7 @@
           <li>Charizard</li> 
         </ol> 
       </section>
-      <img 
-    src = "./img/InternationChampion.jpg" 
-    alt = "A Champion is born!" 
-    width="400px"
-    >
+  
     <p>Learn more about<a href = https://limitlesstcg.com/>Standard Decks</a> here!
     </p>  
     </article> 
