--- a/ page2.html
+++ b/ page2.html
@@ -1,13 +1,16 @@
 </html>
 <!DOCTYPE html>
 <!--This page is design for a collection of useful link to help users find valuable and useful resources-->
+    <head>
+    <!-- Link to the stylesheet called style.css -->
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 <header> 
-  <link rel="stylesheet" href="style.css">
     <h1>Useful Pokémon Websites</h1> 
     <p>This is a page is for useful links for your journey in Pokémon TCG!</p> 
   </header> 
 <body>
-  <p>Go <a href = "index.html">Home</a></p>
+
 <img 
     src = "./img/MeandPikachu.jpg" 
     alt = "Me And Pikachu" 
@@ -23,4 +26,5 @@
         </ul> 
       </section> 
 </body>
+  <p>Go <a href = "index.html">Home</a></p>
 <html>
