--- a/ page2.html
+++ b/ page2.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 <header> 
-    <h1>Useful Pokémon Websites</h1> 
-    <p>This is a page is for useful links for your journey in Pokémon TCG!</p> 
+   
+      <p id = "big" > Useful Pokémon Websites </p>
+    <p id = "bold" >This is a page is for useful links for your journey in Pokémon TCG!</p> 
   </header> 
+    <p>Go <a href = "index.html">Home</a></p>
+
 <body>
 
 <img 
@@ -17,7 +20,7 @@
     width="400px"
   >
 <section> 
-        <p>Websites</p> 
+        <p class = "blue">Websites</p> 
         <p> These websites will help you along your journey of the magical world of Pokémon TCG.</p>
         <ul> 
           <li><a href = https://www.pokemon.com/">Pokémon.com</a> General starting spot </li> 
