--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <!-- Link to the stylesheet called style.css -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <h1>Competitive Pokémon TCG </h1> 
-<header> 
+  <p id = "big" class = "blue">Competitive Pokémon TCG </p>
+<nav> 
+     
+      <ul> 
+        <li><a href="./ page2.html">UsefulLinks</a>
+      </ul> 
+    </nav>
+  <header> 
+    
     <img 
     src = "./img/PokemonLeague.jpg" 
     alt = "Pokemon League Cup" 
     width="500px"
     >
-    <p>This is a page all about the Pokémon TCG!</p> 
+    <p id = "bold">This is a page all about the Pokémon TCG!</p> 
   </header> 
   <main> 
     <aritcle>  
@@ -34,12 +41,18 @@
           <li>Charizard</li> 
         </ol> 
       </section>
-  
+    <p id = "big" class = "green">Practice Tips</p>
+  <div class="flex-container">
+  <div class="box">Practice shuffling your deck</div>
+  <div class="box">Learn how to identify what are your prizes</div>
+  <div class="box">Practice against a clock</div>
+  <div class="box">Four</div>
+</div>
     <p>Learn more about<a href = https://limitlesstcg.com/>Standard Decks</a> here!
     </p>  
     </article> 
     <nav> 
-      <h4>Useful Websites for competitive Pokémon Trading Card Game</h4> 
+      <p class = "green">Useful Websites for competitive Pokémon Trading Card Game</p>
       <ul> 
         <li><a href="./ page2.html">UsefulLinks</a>
       </ul> 
