Assignment #4: Educational Webpage Part 3 - Accessibility
Steps 1-4 Cleaning up code

--- a/ page2.html
+++ b/ page2.html
@@ -1,19 +1,16 @@
 </html>
 <!DOCTYPE html>
-<!--This page is design for a collection of useful link to help users find valuable and useful resources-->
-    <head>
-    <!-- Link to the stylesheet called style.css -->
+
     <link rel="stylesheet" href="./css/style.css" />
-  </head>
-<header> 
-   
+    
+<h1> 
       <p id = "big" > Useful Pokémon Websites </p>
+  </h1>
+  <h2>
     <p id = "bold" >This is a page is for useful links for your journey in Pokémon TCG!</p> 
-  </header> 
-    <p>Go <a href = "index.html">Home</a></p>
-
+    <p> <a href = "index.html">Home</a></p>
+</h2>
 <body>
-
 <img 
     src = "./img/MeandPikachu.jpg" 
     alt = "Me And Pikachu" 
@@ -23,11 +20,13 @@
         <p class = "blue">Websites</p> 
         <p> These websites will help you along your journey of the magical world of Pokémon TCG.</p>
         <ul> 
-          <li><a href = https://www.pokemon.com/">Pokémon.com</a> General starting spot </li> 
-          <li><a href =https://www.trainerhill.com/">TrainerHill.com</a> Learn natchups across decks</li> 
-          <li><a href =https://www.tcgplayer.com/">TCGPlatyer.com</a>  Get singles to build your deck</li> 
+          <li><a href = https://www.pokemon.com>Pokémon.com</a> General starting spot </li> 
+          <li><a href =https://www.trainerhill.com>TrainerHill.com</a> Learn natchups across decks</li> 
+          <li><a href =https://www.tcgplayer.com>TCGPlatyer.com</a>  Get singles to build your deck</li> 
         </ul> 
       </section> 
 </body>
+<footer>
   <p>Go <a href = "index.html">Home</a></p>
+</footer>
 <html>
