--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <!--This page is design for a intro into Pokémon TCG to engage and educate the audience about Pokémon TCG-->
-
-  <head>
-    <!-- Link to the stylesheet called style.css -->
+<!--This page is all about the Pokémon Trading Card Game-->
     <link rel="stylesheet" href="./css/style.css" />
-  </head>
+  <h1>
   <p id = "big" class = "blue">Competitive Pokémon TCG </p>
-<nav> 
-     
+  </h1>
+<h2>
+  <nav> 
       <ul> 
         <li><a href="./ page2.html">UsefulLinks</a>
       </ul> 
     </nav>
-  <header> 
-    
+</h2>
+    <body>
     <img 
     src = "./img/PokemonLeague.jpg" 
     alt = "Pokemon League Cup" 
     width="500px"
     >
     <p id = "bold">This is a page all about the Pokémon TCG!</p> 
-  </header> 
   <main> 
     <aritcle>  
       <p>   Pokémon trading card game has been around since 1998 in the USA. The first ever world championship was held in 2004 in Orlando Florida </p> 
@@ -46,7 +43,7 @@
   <div class="box">Practice shuffling your deck</div>
   <div class="box">Learn how to identify what are your prizes</div>
   <div class="box">Practice against a clock</div>
-  <div class="box">Four</div>
+  <div class="box">Play test against all your match ups</div>
 </div>
     <p>Learn more about<a href = https://limitlesstcg.com/>Standard Decks</a> here!
     </p>  
