Usability testing Clean up
Assignment #4: Educational Webpage Part 3 - Accessibility
steps 5-15

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
-<!--This page is all about the Pokémon Trading Card Game-->
-    <link rel="stylesheet" href="./css/style.css" />
+<html lang="en">
+<link rel="stylesheet" href="./css/style.css" />
+<title> Michael's Competitive Pokémon TCG </title>
   <h1>
   <p id = "big" class = "blue">Competitive Pokémon TCG </p>
   </h1>
