--- a/ page2.html
+++ b/ page2.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Link to Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Link to Your Custom Stylesheet -->
 <link rel="stylesheet" href="./css/style.css" />
 <title> Michael's Useful links for Competitive Pokémon TCG </title>    
 <h1> 
