--- a/ page2.html
+++ b/ page2.html
@@ -10,7 +10,7 @@
  </h1>
 <h2>
     <p id = "bold" >This is a page is for useful links for your journey in Pokémon TCG!</p> 
-    <p> <a href = "index.html">Home</a></p>
+    <a href="index.html" class="btn btn-primary">Home</a>
  </h2>
  <head>
     <style>
@@ -39,6 +39,10 @@
     </style>
   </head>
 <body>
+  <div class="container mt-4">
+    <!-- Your page content goes here -->
+  </div>
+
 <img 
     src = "./img/MeandPikachu.jpg" 
     alt = "Me And Pikachu" 
@@ -55,6 +59,6 @@
   </section> 
  </body>
 <footer>
-  <p>Go <a href = "index.html">Home</a></p>
+      <a href="index.html" class="btn btn-primary">Home</a>
  </footer>
 </html>
