--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <h2>
   <nav> 
       <ul> 
-        <li><a href="./ page2.html">UsefulLinks</a>
-      </ul> 
+        <li>   <a href="./ page2.html" class="btn btn-primary">Useful Links</a>
     </nav>
 </h2>
     <body>
@@ -21,7 +20,7 @@
     alt = "Pokemon League Cup" 
     width="500px"
     >
-    <p id = "bold">This is a page all about the Pokémon TCG!</p> 
+    <p class="text-center">This is a page all about the Pokémon TCG!</p> 
   <main> 
     <aritcle>  
       <p>   Pokémon trading card game has been around since 1998 in the USA. The first ever world championship was held in 2004 in Orlando Florida </p> 
@@ -54,7 +53,8 @@
     <nav> 
       <p class = "green">Useful Websites for competitive Pokémon Trading Card Game</p>
       <ul> 
-        <li><a href="./ page2.html">UsefulLinks</a>
+        <li>    <a href="./ page2.html" class="btn btn-primary">Useful Links</a>
+
       </ul> 
     </nav>
   </main>
