--- a/ page2.html
+++ b/ page2.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- Link to Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Link to Your Custom Stylesheet -->
+  <!-- Link to Bootstrap -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="./css/style.css" />
 <title> Michael's Useful links for Competitive Pokémon TCG </title>    
-<h1> 
-      <p id = "big" > Useful Pokémon Websites </p>
+<header class="text-center mb-4">
+  <h1>Useful Pokémon Websites</h1>
+   <p class="lead">This is a page is for useful links for your journey in Pokémon TCG!</p> 
+</header>
+
  </h1>
 <h2>
-    <p id = "bold" >This is a page is for useful links for your journey in Pokémon TCG!</p> 
+    <p class="lead">This is a page is for useful links for your journey in Pokémon TCG!</p> 
     <a href="index.html" class="btn btn-primary">Home</a>
  </h2>
  <head>
@@ -38,11 +40,8 @@
     
     </style>
   </head>
-<body>
+  <body>
   <div class="container mt-4">
-    <!-- Your page content goes here -->
-  </div>
-
 <img 
     src = "./img/MeandPikachu.jpg" 
     alt = "Me And Pikachu" 
@@ -57,8 +56,10 @@
           <li><a href =https://www.tcgplayer.com>TCGPlatyer.com</a>  Get singles to build your deck</li> 
         </ul> 
   </section> 
- </body>
+</div>
+</body>
 <footer>
-      <a href="index.html" class="btn btn-primary">Home</a>
+  <p>    <a href="index.html" class="btn btn-primary">Home</a>
+</p>
  </footer>
 </html>
