--- a/ page2.html
+++ b/ page2.html
@@ -6,7 +6,6 @@
 <title> Michael's Useful links for Competitive Pokémon TCG </title>    
 <header class="text-center mb-4">
   <h1>Useful Pokémon Websites</h1>
-   <p class="lead">This is a page is for useful links for your journey in Pokémon TCG!</p> 
 </header>
 
  </h1>
@@ -48,7 +47,7 @@
     width="400px"
   >
 <section> 
-        <p class = "blue">Websites</p> 
+        <p class = "blue">Useful Websites</p> 
         <p> These websites will help you along your journey of the magical world of Pokémon TCG.</p>
         <ul> 
           <li><a href = https://www.pokemon.com>Pokémon.com</a> General starting spot </li> 
