--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li>Charizard</li> 
         </ol> 
       </section>
-    <p id = "big" class = "green">Practice Tips</p>
+    <p id = "big" class = "blue">Practice Tips</p>
   <div class="flex-container">
   <div class="box">Practice shuffling your deck</div>
   <div class="box">Learn how to identify what are your prizes</div>
